DM-156] Fix section spacing by removing Flex-grid rule to that strips margin-bottom from nested columns. Additionally, transitioned selectors for first-child and last-child to first-of-type and last-of-type to account for situations where a section is not the first-child or the last-child of the body container. Finally, reorganized icon-usage demo to reflect updates in styles.

--- a/src/styles/abstracts/mixins/_spacing.scss
+++ b/src/styles/abstracts/mixins/_spacing.scss
@@ -13,11 +13,11 @@
             padding-left: calc(var(--gutter-#{$screenSize}) * 4);
             padding-right: calc(var(--gutter-#{$screenSize}) * 4);
         }
-        section:first-child {
+        section:first-of-type {
             margin: 0;
             padding-top: var(--sect--top-pd--#{$screenSize});
         }
-        section:last-child {
+        section:last-of-type {
             padding-bottom: var(--sect--btm-pd--#{$screenSize});
         }
 
